[gd_scene load_steps=12 format=3 uid="uid://ba1tj506kpsrf"]

[ext_resource type="Texture2D" uid="uid://b68wa75s5ylp1" path="res://Sprites/Menu/BackgroundMenu.png" id="1_48dsx"]
[ext_resource type="Script" path="res://Scripts/Core/main_menu.gd" id="1_bs3c0"]
[ext_resource type="Texture2D" uid="uid://k7by1udwp0o3" path="res://icon.svg" id="3_s6660"]
[ext_resource type="FontFile" uid="uid://bnea6xilhcajx" path="res://Fonts/Daydream.ttf" id="4_bis7r"]
[ext_resource type="Script" path="res://Scripts/Main Menu/PlayButton.gd" id="5_328st"]
[ext_resource type="AudioStream" uid="uid://dr3qj1eqdckao" path="res://Audio/general/MainMenu.wav" id="7_6fn7m"]
[ext_resource type="Texture2D" uid="uid://b8ubt50lduryl" path="res://Sprites/UI/SettingsButtonNormal.png" id="7_ayyqv"]
[ext_resource type="PackedScene" uid="uid://gepfu372cr2f" path="res://Scenes/UI/InputSettings/input_settings.tscn" id="8_lv34q"]
[ext_resource type="Script" path="res://Scripts/Main Menu/settings_button_menu.gd" id="8_pq4u0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xlghe"]
bg_color = Color(0, 0.635294, 0.960784, 0.2)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3r2u2"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bs3c0")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -359.0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_48dsx")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 85.0
offset_right = 1216.0
offset_bottom = 294.0
theme_override_colors/font_color = Color(0.733333, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "The Buttnaked 
Warrior"
horizontal_alignment = 1

[node name="GodotPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 427.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xlghe")

[node name="TextureRect" type="TextureRect" parent="GodotPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 6.0
offset_right = 138.0
offset_bottom = 134.0
texture = ExtResource("3_s6660")

[node name="Label" type="Label" parent="GodotPanel"]
layout_mode = 0
offset_left = 157.0
offset_top = 32.0
offset_right = 427.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Made with Godot 4!

Go make games!"

[node name="PlayButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 530.0
offset_top = 463.0
offset_right = 746.0
offset_bottom = 521.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.52549)
theme_override_colors/font_pressed_color = Color(0.411765, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_bis7r")
theme_override_font_sizes/font_size = 50
text = "Play!"
flat = true
script = ExtResource("5_328st")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 411.0
offset_top = 316.0
offset_right = 869.0
offset_bottom = 624.0
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
alignment = 1

[node name="NewGame" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer3/Quit")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/LoadGame")
focus_next = NodePath("../../HBoxContainer2/LoadGame")
focus_previous = NodePath("../../HBoxContainer3/Quit")
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 50
text = "New Game"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
alignment = 1

[node name="LoadGame" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer/NewGame")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/Quit")
focus_next = NodePath("../../HBoxContainer3/Quit")
focus_previous = NodePath("../../HBoxContainer/NewGame")
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0.277528, 0.277528, 0.277528, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/disabled = SubResource("StyleBoxFlat_3r2u2")
text = "Load Game"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
alignment = 1

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer2/LoadGame")
focus_neighbor_bottom = NodePath("../../HBoxContainer/NewGame")
focus_next = NodePath("../../HBoxContainer/NewGame")
focus_previous = NodePath("../../HBoxContainer2/LoadGame")
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_6fn7m")
autoplay = true
bus = &"Music"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0

[node name="Settings" type="Button" parent="CenterContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("7_ayyqv")
flat = true
script = ExtResource("8_pq4u0")

[node name="InputSettings" parent="." instance=ExtResource("8_lv34q")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/NewGame" to="." method="_on_new_game_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/LoadGame" to="." method="_on_load_game_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer3/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Quit" to="." method="_on_quit_pressed"]
[connection signal="button_down" from="CenterContainer/Settings" to="CenterContainer/Settings" method="_on_button_down"]
[connection signal="button_up" from="CenterContainer/Settings" to="CenterContainer/Settings" method="_on_button_up"]
[connection signal="pressed" from="CenterContainer/Settings" to="." method="_on_settings_pressed"]
